# miv

./: Cargo.toml  LICENSE  README.md
src/: buffer.rs  keys.rs  lib.rs  main.rs  mode.rs  point.rs  state.rs  view.rs
src/miv/: buffer.rs  keys.rs  lib.rs  mode.rs  point.rs  state.rs  term.rs  view.rs
src/miv/mode/: insert_mode.rs  mod.rs  normal_mode.rs  replace_mode.rs
