[package]
name = "miv"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/DuoSRX/miv"
homepage = "https://github.com/DuoSRX/miv"
authors = ["Xavier Perez <duosrx@gmail.com>"]
readme = "README.md"

[dependencies]
crossterm = "*"

[lib]
name = "miv"
path = "src/miv/lib.rs"

[[bin]]
name = "miv"
doc = false
